2012-01-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Configuration Variables for Program Behavior):
	split out into new node, other text tweaks.

2012-01-17  Patrice Dumas  <pertusus@free.fr>

	* TODO, tp/TODO: clean tests related TODO parts.

2012-01-16  Patrice Dumas  <pertusus@free.fr>

	* util/detexinfo, util/Makefile.am: new script to strip @-commands.

	* doc/texinfo.txi (Configuration Variables): document TEXTCONTENT
	and RAW_TEXT.

	* tp/texi2any.pl: if SORT_ELEMENT_COUNT is set, dump elements names
	sorted by line count (or word count if ISORT_ELEMENT_COUNT_COUNT_WORDS
	is set) in the associated file.
	* doc/texinfo.txi (Configuration Variables): document
	SORT_ELEMENT_COUNT and SORT_ELEMENT_COUNT_COUNT_WORDS.

2012-01-15  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Configuration Variables for @@-Commands):
	remove @-commands that have no effect and add new @-commands available
	as customization options.

	* tp/texi2any.pl, tp/Texinfo/Convert/TextContent.pm,
	tp/Makefile.am, TODO: 
	New converter that strips commands from output.

2012-01-14  Patrice Dumas  <pertusus@free.fr>

	Move tests from texi2html that are still relevant to tp.

	* configure.ac (AC_CONFIG_FILES): Add tp/tests Makefiles.
	* tp/Makefile.am (SUBDIRS),
	* tp/tests: New directory for tests.

2012-01-14  Sergey Poznyakoff  <gray@gnu.org.ua>

	Use literal matching when searching for xrefs or menu items.
	
	* info/nodes.c (adjust_nodestart): Reset body_start.
	* info/session.c (info_toggle_regexp): Minor change.
	(info_menu_or_ref_item): Set cursor at the start of
	the body if the search fails.
	(info_search_in_node_internal): Take additional argument
	indicating whether to use regexp matching. All uses changed.
	(info_search_in_node): Likewise.
	(info_target_search_node): Use additional argument to mask
	use_regex flag. All uses changed.
	(info_menu_or_ref_item): Mask out use_regex.
	* info/session.h (info_search_in_node)
	(info_target_search_node): Change prototypes.
	