@@ -1,3 +1,8 @@
+2012-01-18  Patrice Dumas  <pertusus@free.fr>
+
+	* configure.ac, Makefile.am (SUBDIRS), Pod-Simple-Texinfo: add a
+	pod to texinfo converter.
+
 2012-01-18  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (Configuration Variables for Program Behavior):
